[package]
name = "blog-search-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tantivy = { version = "0.19", features = ["mmap"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.6", features = ["json"] }
tower-http = { version = "0.4", features = ["cors", "trace", "fs"] }
anyhow = "1.0"
walkdir = "2.3"
toml = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
vercel_runtime = "1.0"
thiserror = "1.0"
url = "2.4"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["full"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "search"
path = "api/search.rs"

[[bin]]
name = "indexer"
path = "src/bin/indexer.rs"

[[bin]]
name = "server"
path = "src/main.rs" 